--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ html {
   height: 100%;
   width: 100%;
 }
+
+.Score {
+  white-space: pre;
+}
+
+.mWinText {
+  color: green;
+}
+
+.mLoseText {
+  color: red;
+}
