--- a/style.css
+++ b/style.css
@@ -1,16 +1,224 @@
-html {
-  height: 100%;
-  width: 100%;
+/*
+  1. Use a more-intuitive box-sizing model.
+*/
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+/*
+  2. Remove default margin
+*/
+* {
+  margin: 0;
+}
+/*
+  Typographic tweaks!
+  3. Add accessible line-height
+  4. Improve text rendering
+*/
+body {
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+}
+/*
+  5. Improve media defaults
+*/
+img, picture, video, canvas, svg {
+  display: block;
+  max-width: 100%;
+}
+/*
+  6. Remove built-in form typography styles
+*/
+input, button, textarea, select {
+  font: inherit;
+}
+/*
+  7. Avoid text overflows
+*/
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
+}
+/*
+  8. Create a root stacking context
+*/
+#root, #__next {
+  isolation: isolate;
 }
 
-.Score {
-  white-space: pre;
+/* END CSS RESET */
+
+/* ROBOTO FONT CLASSES */
+
+.roboto-thin {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.roboto-light {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.roboto-regular {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.roboto-medium {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.roboto-bold {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.roboto-black {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.roboto-thin-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.roboto-light-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.roboto-regular-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.roboto-medium-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.roboto-bold-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.roboto-black-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
+
+/* END ROBOTO FONT */
+
+/* * {
+  outline: 1px solid red;
+} */
+
+body {
+  background-color: #4f4f4f;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-family: roboto, sans-serif;
+}
+
+select {
+  width: 50px;
+  text-align:center;
+  background-color: #4f4f4f;
+  color: #eaebdf;
+  box-shadow: 0 0 5px #2b2b2b;
+  border: 1px solid #9d9e96;
+}
+
+.mLightText {
+  color: #eaebdf;
+}
+
+.Header, .Footer, .ResultContainer {
+  background-color: #2b2b2b;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: 1px solid #eaebdf;
+}
+
+.Header {
+  height: 50px;
+  margin-bottom: 30px;
+}
+
+.Footer {
+  height: 30px;
+  font-size: 11px;
+}
+
+.ContentContainer {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.ResultContainer {
+  min-height: 100px;
+  min-width: 500px;
+  flex-direction: column;
+}
+
+.SelectContainer {
+  display: flex;
+  gap: 10px;
+}
+
+.mPlayButton {
+  width: 120px;
+  height: 35px;
+  margin: 5px;
+  background-color: #eaebdf;
+  color: #2b2b2b;
+  border: 1px solid #eaebdf;
+  box-shadow: 0 0 5px #2b2b2b;
+}
+
+.mPlayButton:hover {
+  background-color: #fde5c0;
+  border: 1px solid #fde5c0;
+  cursor: pointer;
+}
+
+.Reset {
+  width: 80px;
+  background-color: #ffa7a7;
+  border: 1px solid #ffa7a7;
+  box-shadow: 0 0 5px #2b2b2b;
+}
+
+.Reset:hover {
+  background-color: #ff9797;
+  border: 1px solid #ff9797;
+  cursor: pointer;
 }
 
 .mWinText {
-  color: green;
+  color: rgb(173, 255, 96);
 }
 
 .mLoseText {
-  color: red;
+  color: rgb(255, 81, 104);
 }
